--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -105,7 +105,6 @@ h4 {
 
 .background-container {
   width: 100%;
-  height: 100vh;
   max-height: fill-available;
   background-color: #dbe2ef;
   margin-top: 1%;
